--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,5 +1,10 @@
 <%= render "html_header" %>
+<%= render "html_sidebar" %>
 
-<h1>Edit Category</h1>
+<div class="mainContainer">
+    
+        <div class="pageTitle">edit category</div>
 
-<%= render "form", category: @category %>
+        <%= render "form", category: @category %>
+
+</div>
