--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,20 +1,32 @@
 <%= render "html_header" %>
+<%= render "html_sidebar" %>
 
-
-<h1>Categories</h1>
-
-    <% @categories.each do |category| %>
-        <div class="categoryContainer">
-                <%= link_to category.title, category %>
-                <%= link_to "Edit", edit_category_path(category) %>
-                <%= link_to "Delete", category_path(category),
-                    method: :delete,
-                    data: { confirm: "Are you sure?" } %>
-        </div>
-    <% end %>
-
-    <div class="categoryContainer">
-        <%= link_to "+", new_category_path %>
+<div class="mainContainer">
+    
+    <div class="pageTitleContainer">
+        <div class="pageTitle">categories</div>
     </div>
 
-    
+    <div class="mainSubContainer">
+        <% @categories.each do |category| %>
+            <div class="categoryContainer">
+                <%= link_to category.title, category %>
+
+                <div class="smallLinkContainer">
+                    <div class="smallLink">
+                        <%= link_to "Edit", edit_category_path(category) %>
+                    </div>
+                    <div class="smallLink">
+                        <%= link_to "Delete", category_path(category),
+                            method: :delete,
+                            data: { confirm: "Are you sure?" } %>
+                    </div>
+                </div>
+            </div>
+        <% end %>
+
+        <div class="categoryContainer">
+            <%= link_to "+", new_category_path %>
+        </div>
+    </div>
+</div>
