--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,11 +14,35 @@
  *= require_self
  */
 
- body {
+body {
     font-family: 'Arial';
- }
+}
 
- .pageTitle {
+.pageTitle {
     color: darkblue;
+    font-size: 50px;
+    font-weight: 700;
+    text-align: left;
+}
+
+.mainContainer {
+    margin-top: 100px;
+    margin-left: 250px;
+    margin-right: 50px;
+}
+
+.pageTitleContainer {
+    position: fixed;
+    top: 100px;
+}
+
+.mainSubContainer {
+    margin-top: 180px;
+    background-color: transparent;
+}
+
+.smallLink {
+    font-size: 12px;
     text-align: center;
- }
+    text-decoration: none;
+}
