--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,12 +1,84 @@
-// Place all the styles related to the categories controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
-
 .categoryContainer {
-    font-family: Arial;
-    background-color: lightpink;
-    border-radius: 5px;
-    width: 400px;
-    display: inline;
+    background-color: lightgoldenrodyellow;
+    height: 150px;
+    width: 150px;
     margin: 20px;
+    font-size: 30px;
+    text-align: center;
+    color: #000;
+    background:#ffffe0;
+    display: block;
+    padding: 1em;
+    -moz-box-shadow: 5px 5px 7px rgba(33, 33, 33, 1);
+    -webkit-box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
+    box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
+    -moz-transition: -moz-transform 0.15s linear;
+    -o-transition: -o-transform 0.15s linear;
+    -webkit-transition: -webkit-transform 0.15s linear;
+    -webkit-transform: rotate(-6deg);
+    -o-transform: rotate(-6deg);
+    -moz-transform: rotate(-6deg);
+    float: left;
+}
+
+.categoryContainer:nth-child(2n) {
+    -webkit-transform: rotate(4deg);
+    -o-transform: rotate(4deg);
+    -moz-transform: rotate(4deg);
+    position: relative;
+    top: 5px;
+    background: #e5fbe5;
+}
+
+.categoryContainer:nth-child(3n) {
+    -webkit-transform: rotate(-3deg);
+    -o-transform: rotate(-3deg);
+    -moz-transform: rotate(-3deg);
+    position: relative;
+    top: -5px;
+    background: #d8f9ff;
+}
+
+.categoryContainer:nth-child(4n) {
+    -webkit-transform: rotate(-3deg);
+    -o-transform: rotate(-3deg);
+    -moz-transform: rotate(-3deg);
+    position: relative;
+    top: -5px;
+    background: #e6e9fa;
+}
+
+.categoryContainer:nth-child(5n) {
+    -webkit-transform: rotate(-2deg);
+    -o-transform: rotate(-2deg);
+    -moz-transform: rotate(-2deg);
+    position: relative;
+    top: -5px;
+    background: #ede6f5;
+}
+
+.categoryContainer:nth-child(6n) {
+    -webkit-transform: rotate(4deg);
+    -o-transform: rotate(4deg);
+    -moz-transform: rotate(4deg);
+    position: relative;
+    top: -5px;
+    background: #fae9e8;
+}
+
+.categoryContainer:hover, .categoryContainer:focus {
+    box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.7);
+    -moz-box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.7);
+    -webkit-box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.7);
+    -webkit-transform: scale(1.25);
+    -moz-transform: scale(1.25);
+    -o-transform: scale(1.25);
+    position: relative;
+    z-index: 5;
+}
+
+.categoryContainer .smallLinkContainer {
+    position: absolute;
+    bottom: 2px;
+    left: 2px;
 }
