--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -6,8 +6,8 @@ a:link {
     text-decoration: none;
 }
 
-a:visited {
-    text-decoration: none;
+.navLinks a:visited {
+    color: white;
 }
 
 .navBar
@@ -24,7 +24,6 @@ a:visited {
 
 .websiteName
     {
-        font-family:        Arial;
         font-size:          30px;
         font-weight:        bold;
         padding-left:       100px;
