--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,10 @@
 <%= render "html_header" %>
+<%= render "html_sidebar" %>
 
-<h1>New Category</h1>
+<div class="mainContainer">
 
-<%= render "form", category: @category %>
+        <div class="pageTitle">new category</div>
+        
+        <%= render "form", category: @category %>
+
+</div>
