--- a/app/views/application/_html_sidebar.html.erb
+++ b/app/views/application/_html_sidebar.html.erb
@@ -7,7 +7,7 @@
                 <%= link_to "overdue", overdue_path %>
             </div>
             <div class="sideLinks">
-                <%= link_to "soon", today_path %>
+                <%= link_to "soon", soon_path %>
             </div>
         <% end %>
 </div>
