--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -3,8 +3,9 @@
 
 <div class="mainContainer">
 
+    <div class="formContainer">
         <div class="pageTitle">new category</div>
-        
         <%= render "form", category: @category %>
-
+    </div>
+        
 </div>
