--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <body>
-  <div class="deviseContainer">
+  <div class="formContainer">
     <div class="leftDeviseContainer">
     </div>
 
@@ -28,7 +28,7 @@
         </div>
       <% end %>
       
-      <div class="registrationLink">
+      <div class="smallLink">
         <%= render "devise/shared/links" %>
       </div>
     </div>
