--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "html_header" %>
 
 <body>
-  <div class="deviseContainer">
+  <div class="formContainer lower thinner">
     <div class="leftDeviseContainer">
     </div>
 
@@ -34,7 +34,7 @@
         </div>
       <% end %>
       
-      <div class="registrationLink">
+      <div class="smallLink">
         <%= render "devise/shared/links" %>
       </div>
     </div>
