--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -9,6 +9,9 @@
     
         <%= render "tasks/form", category: @category, task: @task %>
     
+        <div class="smallLink">
+            <%= link_to "Back", :back %>
+        </div>
     </div>
 
 </div>
