--- a/app/views/application/_html_header.html.erb
+++ b/app/views/application/_html_header.html.erb
@@ -4,11 +4,19 @@
     </div>
     <div class="navLinks">
         <% if user_signed_in? %>
-            <%= link_to current_user.email, edit_user_registration_path %>
-            <%= link_to "log out", destroy_user_session_path, method: :delete %>
+            <div class="navLink1">
+                <%= link_to current_user.email, edit_user_registration_path %>
+            </div>
+            <div class="navLink2">
+                <%= link_to "log out", destroy_user_session_path, method: :delete %>
+            </div>
         <% else %>
-            <%= link_to "sign up", new_user_registration_path %>
-            <%= link_to "log in", new_user_session_path %>
+            <div class="navLink1">
+                <%= link_to "sign up", new_user_registration_path %>
+            </div>
+            <div class="navLink2">
+                <%= link_to "log in", new_user_session_path %>
+            </div>
         <% end %>
     </div>
 </div>
