done pre-testing

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,7 +1,7 @@
 .navBar {
     display: flex;
     flex-direction: row;
-    background: blue;
+    background: #087ac2;
     height: 50px;
     position: fixed;
     top: 0;
