--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -1,6 +1,6 @@
 .formContainer {
     width: 40%;
-    background-color: #e1f7ff;
+    background-color: #dcf0fc;
     color: #1170ff;
     margin: auto;
     padding: 30px;
