--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -7,7 +7,7 @@
             <% end %>
         </div>
         <% if task.complete %>
-            <s><%= task.name %></s>
+            <div style="color:white;"><s><%= task.name %></s></div>
         <% else %>
             <%= task.name %>
         <% end %>
