--- a/app/views/tasks/soon.html.erb
+++ b/app/views/tasks/soon.html.erb
@@ -17,7 +17,7 @@
             </div>
 
             <div class="smallLink">
-                <%= link_to "Back", :back %>
+                <%= link_to "categories", categories_path %>
             </div>
         </div>
         
